--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,28 @@
 	</properties>
 	<dependencies>
 		<!-- Spring -->
+		
+		<dependency>
+         <groupId>com.fasterxml.jackson.core</groupId>
+         <artifactId>jackson-databind</artifactId>
+         <version>2.7.2</version>
+      </dependency>
+
+      <dependency>
+
+         <groupId>org.codehaus.jackson</groupId>
+
+         <artifactId>jackson-mapper-asl</artifactId>
+
+         <version>1.9.13</version>
+
+      </dependency>
+      
+      
+      
+      
+		
+		
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
