--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,12 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 
+		<!-- JSON 객체 전송 -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.9.8</version>
+		</dependency>
 	</dependencies>
     <build>
         <plugins>
