--- a/src/main/webapp/META-INF/maven/com.igor/minnano/pom.xml
+++ b/src/main/webapp/META-INF/maven/com.igor/minnano/pom.xml
@@ -14,7 +14,6 @@
 		<org.slf4j-version>1.7.25</org.slf4j-version>
 	</properties>
 	<dependencies>
-		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
@@ -137,6 +136,12 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 
+		<!-- JSON 객체 전송 -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.9.8</version>
+		</dependency>
 	</dependencies>
     <build>
         <plugins>
