--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
 		<org.slf4j-version>1.7.25</org.slf4j-version>
 	</properties>
 	<dependencies>
+		
+		
+		
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
@@ -136,6 +139,21 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 
+
+
+ <dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.5</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.2</version>
+		</dependency>     
+		
+		
+		
 		<!-- JSON 객체 전송 -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
