--- a/pom.xml
+++ b/pom.xml
@@ -141,18 +141,17 @@
 
 
 
- <dependency>
+ 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.5</version>
 		</dependency>
+		<!--  potential security vulnerability in before 1.3.3 -->
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
-			<version>1.3.2</version>
+			<version>1.3.3</version>
 		</dependency>     
-		
-		
 		
 		<!-- JSON 객체 전송 -->
 		<dependency>
