--- a/src/main/webapp/META-INF/maven/com.igor/minnano/pom.xml
+++ b/src/main/webapp/META-INF/maven/com.igor/minnano/pom.xml
@@ -159,6 +159,23 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.9.8</version>
 		</dependency>
+		
+		<!-- POI for card payments verification tool -->		
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi</artifactId>
+		    <version>4.0.1</version>
+		</dependency>
+				
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi-ooxml</artifactId>
+		    <version>4.0.1</version>
+		</dependency>
+				
+		
 	</dependencies>
     <build>
         <plugins>
